// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Router get / 1`] = `
Object {
  "@type": "WebPage",
  "hasPart": Object {
    "@type": "WPHeader",
    "hasPart": Array [
      Object {
        "@type": "SiteNavigationElement",
        "name": "About",
        "url": "/about",
      },
      Object {
        "@type": "SiteNavigationElement",
        "name": "Docs",
        "url": "/get-started",
      },
      Array [
        Object {
          "@type": "SiteNavigationElement",
          "name": "My first blog",
          "url": "/blogs/blog1",
        },
        Object {
          "@type": "SiteNavigationElement",
          "name": "My second blog",
          "url": "/blogs/blog2",
        },
      ],
    ],
    "headline": "Sambal",
    "potentialAction": Array [
      Object {
        "@type": "DownloadAction",
        "target": "https://github.com/chen4119/sambal",
      },
    ],
  },
  "mainEntity": Object {
    "@type": "SoftwareSourceCode",
    "description": "A linked data static site generator",
    "headline": "A linked data static site generator",
    "name": "Sambal",
    "text": "<need to <> escape>",
  },
  "url": "/",
}
`;

exports[`Router get /alias/subfolder/blog1 1`] = `
Object {
  "@type": "WebPage",
  "description": "alias folder",
  "mainEntity": Object {
    "@type": "BlogPosting",
    "author": Object {
      "@type": "Person",
      "email": "smitty123@hotmail.com",
      "familyName": "Smith",
      "givenName": "John",
      "hasOfferCatalog": Object {
        "@type": "OfferCatalog",
        "itemListElement": Array [
          Object {
            "@context": Object {
              "@base": "https://sambal.dev",
              "@vocab": "https://schema.org/",
            },
            "@id": "/schema.json",
            "@type": "SoftwareSourceCode",
            "alternativeHeadline": "A linked data static site generator",
            "codeRepository": "https://github.com/chen4119/sambal",
            "headline": "Sambal",
            "potentialAction": Array [
              Object {
                "@type": "Action",
                "name": "Get Started",
                "target": "/docs/get-started",
              },
            ],
            "programmingLanguage": "Typescript",
            "url": "/",
            "usageInfo": Array [
              Object {
                "@type": "HowToTip",
                "headline": "Natively support schema.org json-ld",
              },
              Object {
                "@type": "HowToTip",
                "headline": "Generate both HTML and schema.org json-ld files",
              },
              Object {
                "@type": "HowToTip",
                "headline": "Build UI themes based on the semantic meaning of your data",
              },
            ],
          },
        ],
        "name": "Open source software",
      },
      "name": "John Smith",
    },
    "dateCreated": 2019-10-26T00:00:00.000Z,
    "dateModified": 2019-10-26T00:00:00.000Z,
    "encodingFormat": "text/markdown",
    "headline": "My first blog",
    "image": Object {
      "@type": "ImageObject",
      "contentSize": "2 kB",
      "contentUrl": "https://via.placeholder.com/300",
      "encodingFormat": "image/png",
      "height": 300,
      "url": "https://via.placeholder.com/300",
      "width": 300,
    },
    "keywords": Array [
      "rxjs",
      "java script",
    ],
    "position": 1,
    "text": "

Hello world",
  },
  "url": "/alias/subfolder/blog1",
}
`;

exports[`Router get /blogs/blog1 1`] = `
Object {
  "@type": "WebPage",
  "hasPart": Array [
    Object {
      "@type": "SiteNavigationElement",
      "name": "About",
      "url": "/about",
    },
  ],
  "mainEntity": Object {
    "@type": "BlogPosting",
    "author": Object {
      "@type": "Person",
      "email": "smitty123@hotmail.com",
      "familyName": "Smith",
      "givenName": "John",
      "hasOfferCatalog": Object {
        "@type": "OfferCatalog",
        "itemListElement": Array [
          Object {
            "@context": Object {
              "@base": "https://sambal.dev",
              "@vocab": "https://schema.org/",
            },
            "@id": "/schema.json",
            "@type": "SoftwareSourceCode",
            "alternativeHeadline": "A linked data static site generator",
            "codeRepository": "https://github.com/chen4119/sambal",
            "headline": "Sambal",
            "potentialAction": Array [
              Object {
                "@type": "Action",
                "name": "Get Started",
                "target": "/docs/get-started",
              },
            ],
            "programmingLanguage": "Typescript",
            "url": "/",
            "usageInfo": Array [
              Object {
                "@type": "HowToTip",
                "headline": "Natively support schema.org json-ld",
              },
              Object {
                "@type": "HowToTip",
                "headline": "Generate both HTML and schema.org json-ld files",
              },
              Object {
                "@type": "HowToTip",
                "headline": "Build UI themes based on the semantic meaning of your data",
              },
            ],
          },
        ],
        "name": "Open source software",
      },
      "name": "John Smith",
    },
    "dateCreated": 2019-10-26T00:00:00.000Z,
    "dateModified": 2019-10-26T00:00:00.000Z,
    "encodingFormat": "text/markdown",
    "headline": "My first blog",
    "image": Object {
      "@type": "ImageObject",
      "contentSize": "2 kB",
      "contentUrl": "https://via.placeholder.com/300",
      "encodingFormat": "image/png",
      "height": 300,
      "url": "https://via.placeholder.com/300",
      "width": 300,
    },
    "keywords": Array [
      "rxjs",
      "java script",
    ],
    "position": 1,
    "text": "

Hello world",
  },
  "url": "/blogs/blog1",
}
`;
